--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,7 +6,6 @@ footer {
     position: relative;
     bottom: 0;
     width: 100%;
-    margin-bottom: 0;
 }
 
 .footer-content {
@@ -33,9 +32,12 @@ footer {
     text-decoration: underline;
 }
 
-@media (min-width: 768px) {
+@media (max-width: 768px) {
+    footer {
+        padding: 20px 10px;
+    }
+
     .footer-content {
-        flex-direction: row; 
-        justify-content: space-between;
+        flex-direction: column;
     }
 }
