--- a/scss/_galeria.scss
+++ b/scss/_galeria.scss
@@ -14,3 +14,23 @@
 .color {
     background-color: rgba(53, 172, 38, 0.081);
 }
+
+.galeria {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin: 20px;
+}
+
+.galeria img {
+    max-width: 100%;
+    height: auto;
+    margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+    .galeria {
+        flex-direction: column;
+        align-items: center;
+    }
+}
