--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -14,4 +14,47 @@ nav ul li a {
     text-decoration: none;
     color: black;
     font-weight: bold;
-}
+    transition: color 0.3s ease, text-decoration 0.3s ease-in-out;
+  }
+  
+  nav ul li a:hover {
+    color: #149b99e6;
+    text-decoration: underline;
+  }
+  
+.navbar-toggler {
+    border: none;
+    background-color: transparent;
+  
+    &:focus {
+      outline: none;
+      box-shadow: none;
+    }
+  
+    .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+      filter: invert(1);
+    }
+  }
+  
+  .navbar-collapse {
+    background-color: #11853caa; 
+    padding: 10px;
+  }
+  
+  .navbar-nav .nav-link {
+    color: white;
+    text-transform: uppercase;
+    font-weight: bold;
+    padding: 10px;
+  
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.1);
+      border-radius: 5px;
+    }
+  
+    &.active {
+      color: #ffcc00;
+    }
+  }
+  
