--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 * {
   margin: 0;
   padding: 0;
@@ -293,7 +292,7 @@ footer {
 @media (max-width: 768px) {
   footer {
     padding: 20px 10px;
-    position: fixed; /* Fijar al final */
+    position: fixed;
     bottom: 0;
     width: 100%;
   }
@@ -307,10 +306,10 @@ footer {
   .galeria {
     flex-direction: column;
     align-items: center;
-    gap: 10px; /* Espaciado entre los elementos */
+    gap: 10px;
   }
   .galeria img {
-    max-width: 90%; /* Asegurar que las imágenes no sean demasiado grandes */
+    max-width: 90%;
     height: auto;
   }
 }
