--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: rgba(150, 255, 70, 0.6156862745);
+  background-color: rgba(53, 24, 133, 0.6156862745);
 }
 
 h1 {
@@ -275,6 +275,7 @@ footer {
     padding: 10px;
     width: 100%;
     text-align: center;
+    margin-bottom: 10px;
   }
   .navbar-toggler {
     margin: 0 auto;
@@ -291,8 +292,8 @@ footer {
 }
 @media (max-width: 768px) {
   footer {
-    padding: 20px 10px;
-    position: fixed;
+    padding: 10px 5px;
+    position: static;
     bottom: 0;
     width: 100%;
   }
@@ -312,6 +313,9 @@ footer {
     max-width: 90%;
     height: auto;
   }
+}
+body {
+  background-color: rgba(150, 255, 69, 0.6156862745);
 }
 
 /*# sourceMappingURL=style.css.map */
