--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -15,6 +15,7 @@
       padding: 10px;
       width: 100%;
       text-align: center;
+      margin-bottom: 10px;
     }
   
     .navbar-toggler {
@@ -34,8 +35,8 @@
   }
   @media (max-width: 768px) {
     footer {
-      padding: 20px 10px;
-      position: fixed;
+      padding: 10px 5px;
+      position: static;
       bottom: 0;
       width: 100%;
     }
